fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/Survey_Education__c.object-meta.xml
<CustomObject>
    <label>Survey - Education</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Survey - Education  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey - Education</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>