fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Clinical_Medical_Affairs__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Medical_Affairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical &amp; Medical Affairs</label>
    <type>Checkbox</type>
</CustomField>