fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Comments_or_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Comments_or_Suggestions__c</fullName>
    <label>Comments or Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>