fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey - Education</relationshipLabel>
    <relationshipName>Survey_Education</relationshipName>
    <type>Lookup</type>
</CustomField>