fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Continuing_Education__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuing Education</label>
    <type>Checkbox</type>
</CustomField>