fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Course_material_structure_facilitated_le__c.field-meta.xml
<CustomField>
    <fullName>Course_material_structure_facilitated_le__c</fullName>
    <inlineHelpText>5 = Very Satisfied
4 = Satisfied
3 = Neutral
2 = Unsatisfied
1 = Very Unsatisfied</inlineHelpText>
    <label>Course material/structure facilitated le</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>