fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Ease_of_coordinating_your_education_prog__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_coordinating_your_education_prog__c</fullName>
    <inlineHelpText>5 = Very Satisfied
4 = Satisfied
3 = Neutral
2 = Unsatisfied
1 = Very Unsatisfied</inlineHelpText>
    <label>Ease of coordinating your education prog</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>