fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Education_program_will_Improve_your_Prac__c.field-meta.xml
<CustomField>
    <fullName>Education_program_will_Improve_your_Prac__c</fullName>
    <label>Education program will Improve your Prac</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>