fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>Survey - Education</relationshipLabel>
    <relationshipName>Survey_Education</relationshipName>
    <type>Lookup</type>
</CustomField>