fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Education_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Education_Start_Date__c</fullName>
    <formula>Education_Record__r.Date_of_Event_Start__c</formula>
    <label>Education Start Date</label>
    <type>Date</type>
</CustomField>