fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email_Sent</label>
    <type>Checkbox</type>
</CustomField>