fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Facility_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Facility_Zip_Code__c</fullName>
    <label>Facility Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>