fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Multi_Catch_2__c.field-meta.xml
<CustomField>
    <fullName>Multi_Catch_2__c</fullName>
    <inlineHelpText>Catches: Please rate the attendee&apos;s knowledge acquisition as a result of the education program</inlineHelpText>
    <label>Multi-Catch 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>