fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Multi_Catch_3__c.field-meta.xml
<CustomField>
    <fullName>Multi_Catch_3__c</fullName>
    <inlineHelpText>Catches: Based on attendee&apos;s feedback</inlineHelpText>
    <label>Multi-Catch 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>