fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Multi_Catch_4__c.field-meta.xml
<CustomField>
    <fullName>Multi_Catch_4__c</fullName>
    <inlineHelpText>Catches: Would you like more information regarding any of the following</inlineHelpText>
    <label>Multi-Catch 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>