fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Multi_Catch__c.field-meta.xml
<CustomField>
    <fullName>Multi_Catch__c</fullName>
    <inlineHelpText>Catches: Please rate your education program experience</inlineHelpText>
    <label>Multi-Catch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>