fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Other_More_Info__c.field-meta.xml
<CustomField>
    <fullName>Other_More_Info__c</fullName>
    <label>Other - More Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>