fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Please_rate_your_education_program_exper__c.field-meta.xml
<CustomField>
    <fullName>Please_rate_your_education_program_exper__c</fullName>
    <label>Please rate your education program exper</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Very Unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>