fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Program_Increased_Attendees_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Program_Increased_Attendees_Knowledge__c</fullName>
    <inlineHelpText>5 = Very Satisfied
4 = Satisfied
3 = Neutral
2 = Unsatisfied
1 = Very Unsatisfied</inlineHelpText>
    <label>Program Increased Attendees Knowledge</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>