fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Punctuality_and_preparedness_of_speaker__c.field-meta.xml
<CustomField>
    <fullName>Punctuality_and_preparedness_of_speaker__c</fullName>
    <inlineHelpText>5 = Very Satisfied
4 = Satisfied
3 = Neutral
2 = Unsatisfied
1 = Very Unsatisfied</inlineHelpText>
    <label>Punctuality and preparedness of speaker</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>