fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Teaching_methods_met_the_learning_needs__c.field-meta.xml
<CustomField>
    <fullName>Teaching_methods_met_the_learning_needs__c</fullName>
    <inlineHelpText>5 = Very Satisfied
4 = Satisfied
3 = Neutral
2 = Unsatisfied
1 = Very Unsatisfied</inlineHelpText>
    <label>Teaching methods met the learning needs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>