fullSandbox11072023/force-app/main/default/objects/Survey_Education__c/fields/Would_you_like_more_info__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_more_info__c</fullName>
    <label>Would you like more info?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical &amp; Medical Affairs</fullName>
            </value>
            <value>
                <fullName>Continuing Education</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>